# NetworkManager

./: .gitignore  Makefile.am  NEWS  autogen.sh  configure.ac  meson.build
.gitlab-ci/: build.sh
clients/cli/: connections.c  devices.c  generate-docs-nm-settings-nmcli.xml.in  nmcli.c  nmcli.h  settings.c  settings.h  utils.c
clients/common/: meson.build  (+7 more)
data/: meson.build
dhcp-client/: Cargo.toml  build.rs  wrapper.h
dhcp-client/src/: com.redhat.dhcp  com_redhat.rs  main.rs
libnm/: nm-client.c  nm-client.h  nm-remote-connection.c
libnm-core/: nm-core-internal.h  nm-errors.c  nm-setting-bridge.c  nm-setting-bridge.h  nm-setting-ip-config.c  nm-setting-ip-config.h  nm-setting-ip4-config.c  nm-setting-match.c  nm-setting-vlan.h  nm-setting-wired.h  nm-setting-wireless-security.h  nm-setting-wireless.h  nm-setting.c  nm-team-utils.c  nm-team-utils.h  nm-utils.c
po/: POTFILES.in
src/: meson.build  n-dhcp4-client.c  n-dhcp4.h  nm-act-request.c  nm-act-request.h  nm-auth-utils.c  nm-checkpoint.h  nm-config-data.c  nm-config.h  nm-connectivity.c  nm-core-utils.c  nm-core-utils.h  nm-dbus-manager.h  nm-dbus-object.c  nm-dbus-object.h  nm-dhcp-config.c  nm-dhcp-config.h  nm-dispatcher.c  nm-dispatcher.h  nm-hostname-manager.c  nm-iface-helper.c  nm-ip-config.c  nm-ip4-config.c  nm-ip4-config.h  nm-ip6-config.c  nm-ip6-config.h  nm-l3-config-data.c  nm-l3-config-data.h  nm-l3cfg.c  nm-l3cfg.h  nm-manager.c  nm-netns.c  nm-policy.c  nm-session-monitor.c  nm-session-monitor.h  nm-sleep-monitor.c
tools/: generate-docs-nm-settings-docs-gir.py  run-nm-test.sh
(+100 files in other folders)
